<?xml version="1.0"?>
<package format="2">
  <name>wrappers-ros</name>
  <version>0.0.1</version>
  <description>The wrappers-ros package</description>

  <maintainer email="b.talbot@qut.edu.au">Ben Talbot</maintainer>

  <license>BSD</license>

    <!-- TODO update website when live! -->
  <url type="website">https://roboticvision.org/legacy/best-of-acrv</url>
  <url type="repository">https://github.com/best-of-acrv/wrappers-ros</url>

  <author email="b.talbot@qut.edu.au">Ben Talbot</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
